--- a/css/style.scss
+++ b/css/style.scss
@@ -7,6 +7,7 @@
 
 :root {
   --white: #ffffff;
+  --gray-ligth: #c5c3c3;
   --gray: #696868;
   --black: #000000;
   --sidepad: 8rem;
@@ -42,6 +43,10 @@ main, header, menu, nav, section, footer, div, span {
 
 main, header, footer {
   flex-direction: column;
+}
+
+section {
+  margin-bottom: 10rem;
 }
 
 $sizes: ("xs": 100px, "sm":200px, "md":300px);
@@ -115,4 +120,48 @@ section#one {
 
 section#two {
   gap: 2rem;
+}
+
+section#tree {
+  flex-direction: column;
+  gap: 1rem;
+  padding: 0 8rem;
+
+  div {
+    flex-direction: column;
+    gap: 1rem;
+
+    input {
+      display: none;
+
+      &:checked ~ span {
+        max-height: 100vh;
+        transition: max-height 3s ease;
+      }
+    }
+  
+    label {
+      width: 100%;
+      background-color: var(--gray-ligth);
+      padding: 2rem;
+      border-radius: 4%;
+      min-width: 30rem;
+      cursor: pointer;
+      font-size: 2rem;
+
+      @media (orientation:portrait) {
+        font-size: 1.5rem;
+      }
+    }
+
+    span {
+      overflow: hidden;
+      font-size: 1.5rem;
+      max-height: 0;
+
+      @media (orientation:portrait) {
+        font-size: 1rem;
+      }
+    }
+  }
 }
