--- a/css/style.scss
+++ b/css/style.scss
@@ -165,3 +165,49 @@ section#tree {
     }
   }
 }
+
+section#four {
+  flex-direction: column;
+
+  a {
+    font-size: 1.5rem;
+    padding: 2rem;
+    background-color: var(--gray);
+    border-radius: 10%;
+    text-decoration: none;
+    color: var(--black);
+  }
+
+  div {
+    div {
+      // display: none;
+      position: absolute;
+      width: 80vw;
+      height: 80vh;
+      flex-direction: column;
+      font-size: 1.5rem;
+      padding: 3rem;
+      gap: 2rem;
+      border-radius: 3%;
+      background-color: var(--gray-ligth);
+      box-shadow: 1rem 1rem 1rem var(--gray);
+      transform: translateX(-100vw);
+      transition: transform 2s ease;
+      justify-content: space-between;
+
+      p {
+        font-size: 2rem;
+      }
+
+    }
+  }
+
+  #modal {
+    &:target {
+      .show-modal {
+        display: flex;
+        transform: translateX(0vw) ;
+      }
+    }
+  }
+}
