--- a/css/style.scss
+++ b/css/style.scss
@@ -11,6 +11,8 @@
   --gray: #696868;
   --black: #000000;
   --sidepad: 8rem;
+  --ease: cubic-bezier(0.16, 1, 0.3, 1);
+  
   @media (orientation:portrait) {
       --sidepad: 2rem;
   }
@@ -46,6 +48,7 @@ main, header, footer {
 }
 
 section {
+  padding: 0 var(--sidepad);
   margin-bottom: 10rem;
 }
 
@@ -120,12 +123,15 @@ section#one {
 
 section#two {
   gap: 2rem;
+
+  @media (orientation:portrait) {
+    flex-direction: column;
+  }
 }
 
 section#tree {
   flex-direction: column;
   gap: 1rem;
-  padding: 0 8rem;
 
   div {
     flex-direction: column;
@@ -145,7 +151,6 @@ section#tree {
       background-color: var(--gray-ligth);
       padding: 2rem;
       border-radius: 4%;
-      min-width: 30rem;
       cursor: pointer;
       font-size: 2rem;
 
@@ -245,10 +250,12 @@ section#five {
 }
 
 section#six {
+  padding: 0;
+
   div {
     z-index: 1;
     overflow: hidden;
-
+  
     span {
       position: absolute;
       z-index: 2;
@@ -303,5 +310,37 @@ section#six {
         transition: all 0.5s ease-in-out;
       }
     }
+  }
+}
+
+section#seven {
+  justify-content: space-around;
+
+  @media (orientation: portrait) {
+    flex-direction: column;
+    gap: 4rem;
+  }  
+
+  div {
+    width: 25rem;
+    height: 30rem;
+    background-color: var(--gray-ligth);
+    border-radius: 10%;
+    cursor: pointer;
+  }
+
+  div:hover {
+    img {
+      transform: scale(1.15);
+      filter: drop-shadow(0 1rem 1rem rgba(0, 0, 0, 0.2));
+    }
+  }
+
+  img {
+    max-width: 30rem;
+    max-height: 40rem;
+    filter: drop-shadow(0 0 0 rgba(0, 0, 0, 0.2));
+    transform-origin: bottom;
+    transition: transform .5s var(--ease), filter 0.5s;
   }
 }
