--- a/css/style.scss
+++ b/css/style.scss
@@ -64,8 +64,11 @@ $sizes: ("xs": 100px, "sm":200px, "md":300px);
 
 section#one {
   flex-direction: row;
-
   gap: 4rem;
+
+  @media (orientation: portrait) {
+    flex-direction: column-reverse;
+  }
   
   div {
     span {
@@ -85,14 +88,42 @@ section#one {
           padding: 0.5rem;
       }  
     }
+
+    #right, #left {
+      display: none;
+
+      @media (orientation: portrait) {
+        display: flex;
+      } 
+    }
+
+    #left {
+      rotate: -45deg;
+    }
+
+    #right {
+      rotate: 135deg;
+    }
+
+    #up, #down {
+      display: flex;
+
+      @media (orientation: portrait) {
+        display: none;
+      } 
+    }
   }
 
   div:first-child {
     flex-direction: column;
     gap: 2rem;
     padding: 2rem 0rem;
-    overflow-y: hidden;
+    overflow: hidden;
     z-index: 1;
+
+    @media (orientation: portrait) {
+      flex-direction: row;
+    }  
 
     div {
       z-index: 1;
@@ -102,7 +133,13 @@ section#one {
       border-radius: 10%;
       flex-direction: column;
       gap: 1rem;
-      overflow-y: hidden;
+      overflow: hidden;
+
+      @media (orientation: portrait) {
+        flex-direction: row;
+        height: 10rem;
+        width: 18rem;
+      } 
 
       img {
         width: 10rem;
